# hnorm

./: README.md  hnorm.cabal  stack.yaml
src/: Main.hs
src/C/: Def.hs  Output.hs  Parse.hs
