name:                hnorm
version:             0.1.0.0
synopsis:            C souce code formatter fitting 42 norm
description:         Please see README.md
homepage:            https://github.com/githubuser/test#readme
license:             BSD3
license-file:        LICENSE
author:              Quentin Le Guennec
maintainer:          quentin.leguennec1@gmail.com
copyright:           None
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hnorm
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       C.Parse, C.Def
  build-depends:       base, megaparsec==5.1.2, bytestring -any
  default-language:    Haskell2010

test-suite hnorm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/test
